--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="page">
     <header class="header section">
       <div class="header-logo">
-        <h1 class="header-logo-title">&lt/html&gt</h1>
+        <h1 class="header-logo-title">&lt;/html&gt;</h1>
         <h2 class="header-logo-text">закрывающий тег</h2>
       </div>
       <nav class="theme-menu header__theme-menu">
@@ -55,7 +55,7 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="card-image-container">
-          <p class="card-label">&lt/html&gt</p>
+          <p class="card-label">&lt;/html&gt;</p>
           <img
             class="card-image contrast-sepia"
             src="./images/card1.png"
@@ -112,7 +112,7 @@
       <article class="card-item">
         <h2 class="card-title">1 спринт: Я — чистый лист</h2>
         <div class="card-image-container">
-          <p class="card-label">&lt/html&gt</p>
+          <p class="card-label">&lt;/html&gt;</p>
           <img
             class="card-image brightness"
             src="https://media.giphy.com/media/2dQ3FMaMFccpi/giphy.gif?cid=790b7611lzya0y1y0m4c4zn95ddk6ojs15jytxogq155c4cu&ep=v1_gifs_trending&rid=giphy.gif&ct=g"
@@ -174,7 +174,7 @@
       <article class="card-item">
         <h2 class="card-title">1 спринт: А если не получится?</h2>
         <div class="card-image-container">
-          <p class="card-label">&ltcss&gt</p>
+          <p class="card-label">&lt;css&gt;</p>
           <img
             class="card-image contrast"
             src="https://media.giphy.com/media/JLbgbpLSe4tro4qugo/giphy.gif?cid=ecf05e47fvgw5rlu5lnja84ero391dctt1d9uk2xu0a8ahyv&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -234,7 +234,7 @@
       <article class="card-item">
         <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
         <div class="card-image-container">
-          <p class="card-label">&ltdesigions&gt</p>
+          <p class="card-label">&lt;desigions&gt;</p>
           <img
             class="card-image blur"
             src="https://media.giphy.com/media/fFmYy3YhxP2ksvyy2H/giphy.gif?cid=ecf05e474i3p9687bojmezfawyo15jimtiwle89dk9cjg8yw&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -358,7 +358,7 @@
       <article class="card-item">
         <h2 class="card-title">3 спринт: Обходные стратегии</h2>
         <div class="card-image-container">
-          <p class="card-label">&ltsupport&gt</p>
+          <p class="card-label">&lt;support&gt;</p>
           <img
             class="card-image grayscale"
             src="https://media.giphy.com/media/CtJ7DPdklTwpbXGaxk/giphy.gif"
@@ -418,7 +418,7 @@
       <article class="card-item">
         <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
         <div class="card-image-container">
-          <p class="card-label">&ltlifes-style: none;&gt</p>
+          <p class="card-label">&lt;lifes-style: none;&gt;</p>
           <img
             class="card-image saturate"
             src="https://media.giphy.com/media/gyyrGooGKHHZ4Ykkds/giphy.gif?cid=ecf05e474boeymgawre1dcnawyjyh5da8prdnhpt5dvqe94w&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -479,7 +479,7 @@
       <article class="card-item">
         <h2 class="card-title">«Сейчас я здесь»</h2>
         <div class="card-image-container">
-          <p class="card-label">&ltexperience&gt</p>
+          <p class="card-label">&lt;experience&gt;</p>
           <img
             class="card-image .sepia"
             src="https://media.giphy.com/media/W4NayTLw25aXUJjZUa/giphy.gif"
