index.html mistakes fix

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body class="page">
     <header class="header section">
       <div class="header-logo">
-        <h1 class="header-logo-title">&lt;/html&gt;</h1>
-        <h2 class="header-logo-text">закрывающий тег</h2>
+        <a class="header-logo-title">&lt;/html&gt;</a>
+        <h1 class="header-logo-text">закрывающий тег</h1>
       </div>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -55,7 +55,7 @@
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
         <div class="card-image-container">
-          <p class="card-label">&lt;/html&gt;</p>
+          <span class="card-label">&lt;/html&gt;</span>
           <img
             class="card-image contrast-sepia"
             src="./images/card1.png"
@@ -70,8 +70,9 @@
         </p>
         <p class="card-text">Ну что ж начнем учиться!</p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -103,7 +104,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -112,7 +113,7 @@
       <article class="card-item">
         <h2 class="card-title">1 спринт: Я — чистый лист</h2>
         <div class="card-image-container">
-          <p class="card-label">&lt;/html&gt;</p>
+          <span class="card-label">&lt;/html&gt;</span>
           <img
             class="card-image brightness"
             src="https://media.giphy.com/media/2dQ3FMaMFccpi/giphy.gif?cid=790b7611lzya0y1y0m4c4zn95ddk6ojs15jytxogq155c4cu&ep=v1_gifs_trending&rid=giphy.gif&ct=g"
@@ -132,8 +133,9 @@
           веб-интерфейсов.
         </p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -165,7 +167,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -174,7 +176,7 @@
       <article class="card-item">
         <h2 class="card-title">1 спринт: А если не получится?</h2>
         <div class="card-image-container">
-          <p class="card-label">&lt;css&gt;</p>
+          <span class="card-label">&lt;css&gt;</span>
           <img
             class="card-image contrast"
             src="https://media.giphy.com/media/JLbgbpLSe4tro4qugo/giphy.gif?cid=ecf05e47fvgw5rlu5lnja84ero391dctt1d9uk2xu0a8ahyv&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -192,8 +194,9 @@
           структурировать и управлять проектами в веб-разработке.
         </p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -225,7 +228,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -234,7 +237,7 @@
       <article class="card-item">
         <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
         <div class="card-image-container">
-          <p class="card-label">&lt;desigions&gt;</p>
+          <span class="card-label">&lt;desigions&gt;</span>
           <img
             class="card-image blur"
             src="https://media.giphy.com/media/fFmYy3YhxP2ksvyy2H/giphy.gif?cid=ecf05e474i3p9687bojmezfawyo15jimtiwle89dk9cjg8yw&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -254,8 +257,9 @@
           представления интерфейсов на веб-страницах.
         </p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -287,7 +291,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -296,7 +300,7 @@
       <article class="card-item">
         <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
         <div class="card-image-container">
-          <p class="card-label">care</p>
+          <span class="card-label">care</span>
           <img
             class="card-image opacity"
             src="https://media.giphy.com/media/MDipzxviDNzmW6HxEZ/giphy.gif?cid=ecf05e47smlpy42tujvo3rbxln6vjguq6eq0lvudtx95iyzd&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -316,8 +320,9 @@
           очевидна, и приходится долго искать её причину.
         </p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -349,16 +354,16 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
 
       <article class="card-item">
-        <h2 class="card-title">3 спринт: Обходные стратегии</h2>
+        <span class="card-title">3 спринт: Обходные стратегии</span>
         <div class="card-image-container">
-          <p class="card-label">&lt;support&gt;</p>
+          <span class="card-label">&lt;support&gt;</span>
           <img
             class="card-image grayscale"
             src="https://media.giphy.com/media/CtJ7DPdklTwpbXGaxk/giphy.gif"
@@ -376,8 +381,9 @@
           открывает для меня новые перспективы.
         </p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -409,7 +415,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -418,7 +424,7 @@
       <article class="card-item">
         <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
         <div class="card-image-container">
-          <p class="card-label">&lt;lifes-style: none;&gt;</p>
+          <span class="card-label">&lt;lifes-style: none;&gt;</span>
           <img
             class="card-image saturate"
             src="https://media.giphy.com/media/gyyrGooGKHHZ4Ykkds/giphy.gif?cid=ecf05e474boeymgawre1dcnawyjyh5da8prdnhpt5dvqe94w&ep=v1_gifs_related&rid=giphy.gif&ct=g"
@@ -437,8 +443,9 @@
           странице – это интересный и важный шаг в моем обучении.
         </p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -470,7 +477,7 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -479,7 +486,7 @@
       <article class="card-item">
         <h2 class="card-title">«Сейчас я здесь»</h2>
         <div class="card-image-container">
-          <p class="card-label">&lt;experience&gt;</p>
+          <span class="card-label">&lt;experience&gt;</span>
           <img
             class="card-image .sepia"
             src="https://media.giphy.com/media/W4NayTLw25aXUJjZUa/giphy.gif"
@@ -497,8 +504,9 @@
         </p>
         <p class="card-text">Ура ура ура урааааааааааааааааааааа</p>
         <div class="card-buttons">
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
+              aria-hidden="true"
               class="like-icon"
               xmlns="http://www.w3.org/2000/svg"
               width="39"
@@ -530,15 +538,13 @@
               />
             </svg>
           </button>
-          <button class="card__like-button button">
+          <button type="button" class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
-    </main>
-    <footer class="footer section">
       <button
-        class="footer-button button"
+        class="save-button button"
         type="button"
         onclick="window['save-dialog'].showModal();"
         aria-controls="save-dialog"
@@ -563,7 +569,7 @@
           <span class="button__text">Ок</span>
         </button>
       </dialog>
-    </footer>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
