--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           основами и настроиться на учёбу. И, возможно, подумать, как новые
           знания могут повлиять на ваше будущее.
         </p>
-        <p class="card-text">Ну что ж начнем учиться!</p>
+        <p class="card-text">Ну что ж начнем учиться! Ну что ж начнем учиться!</p>
         <div class="card-buttons">
           <button type="button" class="card__icon-button">
             <svg
