--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       </article>
 
       <article class="card-item">
-        <span class="card-title">3 спринт: Обходные стратегии</span>
+        <h2 class="card-title">3 спринт: Обходные стратегии</h2>
         <div class="card-image-container">
           <span class="card-label">&lt;support&gt;</span>
           <img
@@ -488,7 +488,7 @@
         <div class="card-image-container">
           <span class="card-label">&lt;experience&gt;</span>
           <img
-            class="card-image .sepia"
+            class="card-image sepia"
             src="https://media.giphy.com/media/W4NayTLw25aXUJjZUa/giphy.gif"
             alt="That's great"
           />
